--- a/frontend/src/components/BookmarkCard/BookmarkCard.css
+++ b/frontend/src/components/BookmarkCard/BookmarkCard.css
@@ -8,7 +8,7 @@
   box-sizing: content-box;
 }
 
-.bookmkark-card__image-container {
+.bookmark-card__image-container {
   grid-area: image;
   height: 200px;
 }
@@ -17,7 +17,7 @@
   grid-area: info;
   height: 200px;
 }
-.image {
+.bookmark-image {
   max-height: 200px;
   max-width: 200px;
 }
