--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,19 +1,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap");
 * {
-  /* box-sizing: border-box; */
   margin: 0;
   padding: 0;
   font-family: "Raleway", sans-serif;
   font-weight: bold;
 }
+#root {
+  height: 100vh;
+  width: 100vw;
+  background-color: #fcecdd;
+  position: relative;
+  display: grid;
+  grid-template-areas:
+    "header"
+    "content"
+    "footer";
+  grid-template-rows: 5% 90% 5%;
+}
 .navbar-container {
   display: flex;
   justify-content: space-around;
-  background-color: rgb(240, 178, 178);
+  align-items: center;
+  background-color: #fea82f;
   font-size: 20px;
+  grid-area: header;
 }
 .user-nav {
   width: 250px;
   display: flex;
   justify-content: space-between;
+}
+.logo {
+  width: 250px;
 }
