buttons render, memo: need to utilize auth , and test backend api/events

--- a/frontend/src/components/EventPage/EventPage.css
+++ b/frontend/src/components/EventPage/EventPage.css
@@ -72,3 +72,8 @@
   flex-flow: column;
   align-items: center;
 }
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
