--- a/frontend/src/components/EventPage/EventPage.css
+++ b/frontend/src/components/EventPage/EventPage.css
@@ -14,8 +14,11 @@
   z-index: 1;
   grid-area: image;
   border-radius: 10px 10px 0 0;
+  object-fit: cover;
 }
-
+.event-image {
+  width: 100%;
+}
 .event-info-container {
   padding: 10px;
   border: solid 1px rgb(199, 218, 183);
