--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -1,1 +1,17 @@
 /* todo */
+.login-container {
+  grid-area: content;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.login-form-container {
+  display: flex;
+  border: 1px solid rgba(160, 148, 41, 0.973);
+  height: 300px;
+  width: 300px;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+}
