--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -7,4 +7,13 @@
   top: 5%;
   z-index: 999;
   background-color: #e7dac8;
+  height: 185px;
+  width: 150px;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.logout-button {
+  height: 30px;
 }
