--- a/frontend/src/components/TicketCard/TicketCard.css
+++ b/frontend/src/components/TicketCard/TicketCard.css
@@ -4,19 +4,27 @@
   grid-template-columns: 70% 30%;
   width: 700px;
   height: 150px;
-
+  border: rgba(181, 190, 98, 0.651) solid 1px;
   box-sizing: content-box;
 }
 .ticket-card__image-container {
   grid-area: image;
   height: 150px;
   object-fit: cover;
+  overflow: hidden;
 }
 
 .ticket-card__detail-container {
   grid-area: info;
   height: 150px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .ticket-image {
   width: 100%;
+}
+.ticket-card :hover {
+  box-shadow: 1px 5px 5px rgba(97, 69, 69, 0.534);
 }
